Swipe/match toiminnallisuuden lisäys ja talletus
